--- a/index.html
+++ b/index.html
@@ -3,54 +3,74 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DM0407 - Pro Handyman Service You Can Trust</title>
+  <title>Pro Handyman Services</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <header>
-    <nav>
-      <div class="logo">
-        <img src="img/logo.png" alt="DM0407 Logo">
+
+  <!-- Navigation -->
+  <nav>
+    <div class="logo">Pro Handyman</div>
+    <div class="menu-toggle" id="mobile-menu">&#9776;</div>
+    <ul class="nav-links" id="nav-links">
+      <li><a href="#home">Home</a></li>
+      <li><a href="#services">Services</a></li>
+      <li><a href="#gallery">Gallery</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
+
+  <!-- Hero Area: Home -->
+  <section id="home">
+    <h1>Trusted Pro Handyman Services</h1>
+    <p>Welcome to our company. We provide reliable solutions for your home, including repairs, installations, cleaning, and more.</p>
+    <button onclick="document.getElementById('services').scrollIntoView({ behavior: 'smooth' });">View Services</button>
+  </section>
+
+  <!-- Hero Area: Services -->
+  <section id="services">
+    <h1>Our Services</h1>
+    <div class="services">
+      <div class="service-card">
+        <h2>Repairs</h2>
+        <p>We handle all types of home repairs efficiently and professionally.</p>
       </div>
-      <button class="menu-toggle" id="mobile-menu">&#9776;</button>
-      <ul class="nav-links" id="nav-links">
-        <li><a href="#home">Home</a></li>
-        <li><a href="#services">Services</a></li>
-        <li><a href="#gallery">Gallery</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
-
-  <section id="home" class="hero">
-    <h1>Pro Handyman Service You Can Trust</h1>
-    <p>We handle repairs, installations, painting, cleaning, and more.</p>
-  </section>
-
-  <section id="services" class="hero">
-    <h2>Our Services</h2>
-    <p>From fixing and repairing to moving and installing, we cover it all.</p>
-  </section>
-
-  <section id="gallery" class="hero">
-    <h2>Gallery</h2>
-    <p>Take a look at some of our completed projects.</p>
-    <div class="gallery">
-      <img src="img/placeholder1.jpg" alt="Work 1">
-      <img src="img/placeholder2.jpg" alt="Work 2">
-      <img src="img/placeholder3.jpg" alt="Work 3">
+      <div class="service-card">
+        <h2>Painting</h2>
+        <p>Interior and exterior painting services to refresh your space.</p>
+      </div>
+      <div class="service-card">
+        <h2>Cleaning</h2>
+        <p>Comprehensive home cleaning services to keep your home spotless.</p>
+      </div>
+      <div class="service-card">
+        <h2>Installation & Moving</h2>
+        <p>Furniture, appliances, and other installations or moving tasks.</p>
+      </div>
     </div>
   </section>
 
-  <section id="contact" class="hero">
-    <h2>Contact Us</h2>
-    <p>Get in touch with our team today.</p>
-    <img src="img/contact.png" alt="Contact Icon" class="contact-icon">
+  <!-- Hero Area: Gallery -->
+  <section id="gallery">
+    <h1>Gallery</h1>
+    <div class="gallery">
+      <img src="img/placeholder1.jpg" alt="Sample work 1">
+      <img src="img/placeholder2.jpg" alt="Sample work 2">
+      <img src="img/placeholder3.jpg" alt="Sample work 3">
+      <img src="img/placeholder4.jpg" alt="Sample work 4">
+    </div>
   </section>
 
-  <footer>
-    <p>&copy; 2025 DM0407. All rights reserved.</p>
-  </footer>
+  <!-- Hero Area: Contact -->
+  <section id="contact">
+    <h1>Contact Us</h1>
+    <form>
+      <input type="text" placeholder="Name" required>
+      <input type="email" placeholder="Email" required>
+      <textarea placeholder="Message" required></textarea>
+      <button type="submit">Send</button>
+    </form>
+  </section>
 
   <script src="js/script.js"></script>
 </body>
