Actualización de estilos y estructura

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pro Handyman Services</title>
+  <title>Pro Handyman Services - carlos test</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
