ligthbox/slider/fuente correccion

--- a/index_bkp150920251915.html
+++ b/index_bkp150920251915.html
@@ -6,7 +6,6 @@
   <title>DM0407 - Pro Handyman Services</title>
   <link rel="icon" href="img/hammer.png" type="image/png">
   <link rel="stylesheet" href="css/style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="path/to/lightbox.css"> <!-- Añadir enlace a la hoja de estilos de Lightbox -->
 </head>
 <body>
@@ -159,9 +158,11 @@
       <button type="submit">Send</button>
     </form>
   </section>
-  <footer>
-    <p>&copy; 2025 DM 0407. All rights reserved.</p>
-  </footer>
+
+  <!-- INICIO TEST Area: SLIDER IMAGES -->
+
+  
+  <!-- FIN TEST Area: SLIDER IMAGES -->
 
   <script src="js/script.js"></script>
   <script src="path/to/lightbox-plus-jquery.js"> </script> <!-- Añadir enlace al script de Lightbox -->
