--- a/index.html
+++ b/index.html
@@ -159,8 +159,10 @@
       <button type="submit">Send</button>
     </form>
   </section>
-  <footer>
-    <p>&copy; 2025 DM 0407. All rights reserved.</p>
+
+  <!-- Footer -->
+  <footer class="footer-dm0407">
+    <p>&copy; 2025 DM0407. All rights reserved.</p>
   </footer>
 
   <script src="js/script.js"></script>
