cambio de img servicios

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="css/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="path/to/lightbox.css"> <!-- Añadir enlace a la hoja de estilos de Lightbox -->
+
 </head>
 <body>
 
@@ -44,10 +45,10 @@
     <div class="service-card">
       <div class="comparison-slider">
         <a href="img/services/repairs-before.webp" data-lightbox="repairs" data-title="Before Repairs">
-          <img src="img/services/repairs-before.webp" alt="Before Repairs" class="before-img">
+          <img src="img/services/repairs-before.webp" alt="Before Repairs" class="after-img">
         </a>
         <a href="img/services/repairs-after.webp" data-lightbox="repairs" data-title="After Repairs">
-          <img src="img/services/repairs-after.webp" alt="After Repairs" class="after-img">
+          <img src="img/services/repairs-after.webp" alt="After Repairs" class="before-img">
         </a>
         <input type="range" min="0" max="100" value="50" class="slider">
       </div>
@@ -112,20 +113,20 @@
       </div>
     </div>
 
-    <!-- Servicio 5: Electrical -->
+    <!-- Servicio 5: Bathroom Renovation -->
     <div class="service-card">
       <div class="comparison-slider">
-        <a href="img/services/electrical-before.webp" data-lightbox="electrical" data-title="Before Electrical">
-          <img src="img/services/electrical-before.webp" alt="Before Electrical" class="before-img">
+        <a href="img/services/br-before.webp" data-lightbox="bathroom renovation" data-title="Before BR">
+          <img src="img/services/br-before.webp" alt="Before BR" class="before-img">
         </a>
-        <a href="img/services/electrical-after.webp" data-lightbox="electrical" data-title="After Electrical">
-          <img src="img/services/electrical-after.webp" alt="After Electrical" class="after-img">
+        <a href="img/services/br-after.webp" data-lightbox="bathroom renovation" data-title="After BR">
+          <img src="img/services/br-after.webp" alt="After BR" class="after-img">
         </a>
         <input type="range" min="0" max="100" value="50" class="slider">
       </div>
       <div class="service-text">
-        <h2>Electrical</h2>
-        <p>Safe and reliable electrical services for your home.</p>
+        <h2>Bathroom renovation</h2>
+        <p>We specialize in transforming bathrooms into modern, functional, and stylish spaces. From updating fixtures and tiles to complete remodels, our team ensures high-quality craftsmanship and attention to detail for every project.</p>
         <button class="service-btn">Contact Us</button>
       </div>
     </div>
