chat, contacto, SEO

--- a/index.html
+++ b/index.html
@@ -1,14 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+  <!-- INICIO Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-X2EYZ620S9"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-X2EYZ620S9');
+  </script>
+  <!-- FIN Google tag (gtag.js) -->
+
+  <meta name="google-site-verification" content="jI7Xe5yJnUhkd_s39-xm-_E7AtlqUFpZ_Hfyjlc39hI" /> <!-- Verificación de Google Search Console -->
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DM0407 - Pro Handyman Services</title>
+  <meta name="description" content="Professional handyman services in Aurora, Colorado. Interior & exterior painting, bathroom remodeling, and more. Quality work at competitive prices.">
+  <meta property="og:title" content="DM0407 - Pro Handyman Services">
+  <meta property="og:description" content="Professional handyman services in Aurora, Colorado. Interior & exterior painting, bathroom remodeling, and more.">
+  <meta property="og:image" content="https://www.dm0407.com/img/logo.svg">
+  <meta property="og:url" content="https://www.dm0407.com/">
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="DM0407">
+
+  <title>DM0407 - Handyman Services Aurora, CO</title>
   <link rel="icon" href="img/hammer.png" type="image/png">
   <link rel="stylesheet" href="css/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="path/to/lightbox.css"> <!-- Añadir enlace a la hoja de estilos de Lightbox -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+  <link rel="canonical" href="https://www.dm0407.com/">
+
+  <!-- Schema LocalBusiness -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "LocalBusiness",
+    "name": "DM0407",
+    "image": "https://www.dm0407.com/img/logo.svg",
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "Aurora",
+      "addressRegion": "CO"
+    },
+    "telephone": "+1-768-281-9361",
+    "url": "https://www.dm0407.com"
+  }
+  </script>
 
 </head>
 <body>
@@ -39,7 +79,7 @@
   
   
   <section id="services">
-  <h1>Our Services</h1>
+  <h2>Our Services</h2>
   <div class="services-grid">
 
     <!-- Servicio 1: Repairs -->
@@ -54,7 +94,7 @@
         <input type="range" min="0" max="100" value="50" class="slider">
       </div>
       <div class="service-text">
-        <h2>Repairs</h2>
+        <h3>Repairs</h3>
         <p>We handle all types of home repairs efficiently and professionally.</p>
         <button class="service-btn">Contact Us</button>
       </div>
@@ -72,7 +112,7 @@
         <input type="range" min="0" max="100" value="50" class="slider">
       </div>
       <div class="service-text">
-        <h2>Painting</h2>
+        <h3>Painting</h3>
         <p>Interior and exterior painting services to refresh your space.</p>
         <button class="service-btn">Contact Us</button>
       </div>
@@ -90,7 +130,7 @@
         <input type="range" min="0" max="100" value="50" class="slider">
       </div>
       <div class="service-text">
-        <h2>Landscaping</h2>
+        <h3>Landscaping</h3>
         <p>Comprehensive home landscaping services to keep your home spotless.</p>
         <button class="service-btn">Contact Us</button>
       </div>
@@ -108,7 +148,7 @@
         <input type="range" min="0" max="100" value="50" class="slider">
       </div>
       <div class="service-text">
-        <h2>Installation & Moving</h2>
+        <h3>Installation & Moving</h3>
         <p>Furniture, appliances, and other installations or moving tasks.</p>
         <button class="service-btn">Contact Us</button>
       </div>
@@ -126,8 +166,8 @@
         <input type="range" min="0" max="100" value="50" class="slider">
       </div>
       <div class="service-text">
-        <h2>Bathroom renovation</h2>
-        <p>We specialize in transforming bathrooms into modern, functional, and stylish spaces. From updating fixtures and tiles to complete remodels, our team ensures high-quality craftsmanship and attention to detail for every project.</p>
+        <h3>Bathroom renovation</h3>
+        <p>Modern. Functional. Stylish. Expert craftsmanship in every remodel.</p>
         <button class="service-btn">Contact Us</button>
       </div>
     </div>
@@ -140,7 +180,7 @@
 
   <!-- Hero Area: Gallery with Lightbox -->
   <section id="gallery">
-    <h1>Gallery</h1>
+    <h2>Gallery</h2>
     <!-- galeria de pc -->
     <div class="gallery">
       <a href="img/gallery/image1.webp" data-lightbox="gallery" data-title="Sample work 1"><img src="img/gallery/image1.webp" alt="Sample work 1"></a>
@@ -179,13 +219,37 @@
 
   <!-- Hero Area: Contact -->
   <section id="contact">
-    <h1>Contact Us</h1>
+    <h2>Contact Us</h2>
     <form>
       <input type="text" placeholder="Name" required>
       <input type="email" placeholder="Email" required>
       <textarea placeholder="Message" required></textarea>
       <button type="submit">Send</button>
     </form>
+
+<br></br>
+<br></br>
+
+    <div class="contact-info">
+      <!-- Columna izquierda -->
+      <div class="contact-left">
+        <h3><img src="img/contact/mail.webp" alt="Mail"> contact@dm0407.com</h3>
+        <h3><img src="img/contact/phone.webp" alt="Phone"><a href="tel:+17682819361">+1 (768) 281-9361</a></h3>
+      </div>
+
+      <!-- Separador vertical -->
+      <div class="divider"></div>
+
+      <!-- Columna derecha -->
+      <div class="contact-right">
+        <a href="https://www.instagram.com/dm0407_multiservice/" target="_blank">
+          <img src="img/contact/instagram.webp" alt="Instagram" class="social-icon">
+        </a>
+        <a href="https://facebook.com/@dmmultiserveces" target="_blank">
+          <img src="img/contact/fb.webp" alt="Facebook" class="social-icon">
+        </a>
+      </div>
+    </div>
   </section>
 
   <!-- Footer -->
@@ -197,5 +261,19 @@
   <script src="js/script.js"></script>
   <script src="path/to/lightbox-plus-jquery.js"> </script> <!-- Añadir enlace al script de Lightbox -->
   
+  <!--Start of Tawk.to Script-->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/68d0d3cf05ac3219268a4dec/1j5nrmosn';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
+<!--End of Tawk.to Script-->
+
 </body>
 </html>
