--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
     <div class="service-card">
       <div class="comparison-slider">
         <a href="img/services/repairs-before.webp" data-lightbox="repairs" data-title="Before Repairs">
-          <img src="img/services/repairs-before.webp" alt="Before Repairs" class="after-img">
+          <img src="img/services/repairs-before.webp" loading="lazy" alt="Before Repairs" class="after-img">
         </a>
         <a href="img/services/repairs-after.webp" data-lightbox="repairs" data-title="After Repairs">
-          <img src="img/services/repairs-after.webp" alt="After Repairs" class="before-img">
+          <img src="img/services/repairs-after.webp" loading="lazy" alt="After Repairs" class="before-img">
         </a>
         <input type="range" min="0" max="100" value="50" class="slider">
       </div>
@@ -104,10 +104,10 @@
     <div class="service-card">
       <div class="comparison-slider">
         <a href="img/services/painting-before.webp" data-lightbox="painting" data-title="Before Painting">
-          <img src="img/services/painting-before.webp" alt="Before Painting" class="before-img">
+          <img src="img/services/painting-before.webp" loading="lazy" alt="Before Painting" class="before-img">
         </a>
         <a href="img/services/painting-after.webp" data-lightbox="painting" data-title="After Painting">
-          <img src="img/services/painting-after.webp" alt="After Painting" class="after-img">
+          <img src="img/services/painting-after.webp" loading="lazy" alt="After Painting" class="after-img">
         </a>
         <input type="range" min="0" max="100" value="50" class="slider">
       </div>
@@ -122,10 +122,10 @@
     <div class="service-card">
       <div class="comparison-slider">
         <a href="img/services/landscaping-before.webp" data-lightbox="landscaping" data-title="Before Landscaping">
-          <img src="img/services/landscaping-before.webp" alt="Before Landscaping" class="before-img">
+          <img src="img/services/landscaping-before.webp" loading="lazy" alt="Before Landscaping" class="before-img">
         </a>
         <a href="img/services/landscaping-after.webp" data-lightbox="landscaping" data-title="After Landscaping">
-          <img src="img/services/landscaping-after.webp" alt="After Landscaping" class="after-img">
+          <img src="img/services/landscaping-after.webp" loading="lazy" alt="After Landscaping" class="after-img">
         </a>
         <input type="range" min="0" max="100" value="50" class="slider">
       </div>
@@ -140,10 +140,10 @@
     <div class="service-card">
       <div class="comparison-slider">
         <a href="img/services/moving-before.webp" data-lightbox="moving" data-title="Before Moving">
-          <img src="img/services/moving-before.webp" alt="Before Moving" class="before-img">
+          <img src="img/services/moving-before.webp" loading="lazy" alt="Before Moving" class="before-img">
         </a>
         <a href="img/services/moving-after.webp" data-lightbox="moving" data-title="After Moving">
-          <img src="img/services/moving-after.webp" alt="After Moving" class="after-img">
+          <img src="img/services/moving-after.webp" loading="lazy" alt="After Moving" class="after-img">
         </a>
         <input type="range" min="0" max="100" value="50" class="slider">
       </div>
@@ -158,10 +158,10 @@
     <div class="service-card">
       <div class="comparison-slider">
         <a href="img/services/br-before.webp" data-lightbox="bathroom renovation" data-title="Before BR">
-          <img src="img/services/br-before.webp" alt="Before BR" class="before-img">
+          <img src="img/services/br-before.webp" loading="lazy" alt="Before BR" class="before-img">
         </a>
         <a href="img/services/br-after.webp" data-lightbox="bathroom renovation" data-title="After BR">
-          <img src="img/services/br-after.webp" alt="After BR" class="after-img">
+          <img src="img/services/br-after.webp" loading="lazy" alt="After BR" class="after-img">
         </a>
         <input type="range" min="0" max="100" value="50" class="slider">
       </div>
@@ -183,31 +183,31 @@
     <h2>Gallery</h2>
     <!-- galeria de pc -->
     <div class="gallery">
-      <a href="img/gallery/image1.webp" data-lightbox="gallery" data-title="Sample work 1"><img src="img/gallery/image1.webp" alt="Sample work 1"></a>
-      <a href="img/gallery/image2.webp" data-lightbox="gallery" data-title="Sample work 2"><img src="img/gallery/image2.webp" alt="Sample work 2"></a>
-      <a href="img/gallery/image3.webp" data-lightbox="gallery" data-title="Sample work 3"><img src="img/gallery/image3.webp" alt="Sample work 3"></a>
-      <a href="img/gallery/image4.webp" data-lightbox="gallery" data-title="Sample work 4"><img src="img/gallery/image4.webp" alt="Sample work 4"></a>
-      <a href="img/gallery/image5.webp" data-lightbox="gallery" data-title="Sample work 5"><img src="img/gallery/image5.webp" alt="Sample work 5"></a>
-      <a href="img/gallery/image6.webp" data-lightbox="gallery" data-title="Sample work 6"><img src="img/gallery/image6.webp" alt="Sample work 6"></a>
+      <a href="img/gallery/image1.webp" data-lightbox="gallery" data-title="Sample work 1"><img src="img/gallery/image1.webp" loading="lazy" alt="Sample work 1"></a>
+      <a href="img/gallery/image2.webp" data-lightbox="gallery" data-title="Sample work 2"><img src="img/gallery/image2.webp" loading="lazy" alt="Sample work 2"></a>
+      <a href="img/gallery/image3.webp" data-lightbox="gallery" data-title="Sample work 3"><img src="img/gallery/image3.webp" loading="lazy" alt="Sample work 3"></a>
+      <a href="img/gallery/image4.webp" data-lightbox="gallery" data-title="Sample work 4"><img src="img/gallery/image4.webp" loading="lazy" alt="Sample work 4"></a>
+      <a href="img/gallery/image5.webp" data-lightbox="gallery" data-title="Sample work 5"><img src="img/gallery/image5.webp" loading="lazy" alt="Sample work 5"></a>
+      <a href="img/gallery/image6.webp" data-lightbox="gallery" data-title="Sample work 6"><img src="img/gallery/image6.webp" loading="lazy" alt="Sample work 6"></a>
     </div>
 
     <!-- Swiper -->
     <div class="swiper mySwiper">
       <div class="swiper-wrapper">
         <div class="swiper-slide">
-          <img src="img/gallery/work1.webp" alt="work 1">
+          <img src="img/gallery/work1.webp" loading="lazy" alt="work 1">
         </div>
         <div class="swiper-slide">
-          <img src="img/gallery/work2.webp" alt="work 2">
+          <img src="img/gallery/work2.webp" loading="lazy" alt="work 2">
         </div>
         <div class="swiper-slide">
-          <img src="img/gallery/work3.webp" alt="work 3">
+          <img src="img/gallery/work3.webp" loading="lazy" alt="work 3">
         </div>
         <div class="swiper-slide">
-          <img src="img/gallery/work4.webp" alt="work 4">
+          <img src="img/gallery/work4.webp" loading="lazy" alt="work 4">
         </div>
         <div class="swiper-slide">
-          <img src="img/gallery/work5.webp" alt="work 5">
+          <img src="img/gallery/work5.webp" loading="lazy" alt="work 5">
         </div>
       </div>
       <div class="swiper-button-next"></div>
@@ -227,14 +227,14 @@
       <button type="submit">Send</button>
     </form>
 
-<br></br>
-<br></br>
+<p></p>
+<p></p>
 
     <div class="contact-info">
       <!-- Columna izquierda -->
       <div class="contact-left">
-        <h3><img src="img/contact/mail.webp" alt="Mail"> contact@dm0407.com</h3>
-        <h3><img src="img/contact/phone.webp" alt="Phone"><a href="tel:+17682819361">+1 (768) 281-9361</a></h3>
+        <h3><img src="img/contact/mail.webp" loading="lazy" alt="Mail"> contact@dm0407.com</h3>
+        <h3><img src="img/contact/phone.webp" loading="lazy" alt="Phone"><a href="tel:+17682819361">+1 (768) 281-9361</a></h3>
       </div>
 
       <!-- Separador vertical -->
@@ -243,10 +243,10 @@
       <!-- Columna derecha -->
       <div class="contact-right">
         <a href="https://www.instagram.com/dm0407_multiservice/" target="_blank">
-          <img src="img/contact/instagram.webp" alt="Instagram" class="social-icon">
+          <img src="img/contact/instagram.webp" loading="lazy" alt="Instagram" class="social-icon">
         </a>
         <a href="https://facebook.com/@dmmultiserveces" target="_blank">
-          <img src="img/contact/fb.webp" alt="Facebook" class="social-icon">
+          <img src="img/contact/fb.webp" loading="lazy" alt="Facebook" class="social-icon">
         </a>
       </div>
     </div>
