--- a/index.html
+++ b/index.html
@@ -39,12 +39,6 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
   <link rel="canonical" href="https://www.dm0407.com/">
 
-  <style>
-  #home { text-align: center; padding: 50px 20px; }
-  #home h1 { font-family: 'Roboto', sans-serif; font-size: 3rem; margin-bottom: 20px; }
-  #home p { font-family: 'Roboto', sans-serif; font-size: 1.2rem; margin-bottom: 30px; }
-  #home .hero-logo img { width: 500px; height: auto; display: block; opacity: 0.1; }
-  </style>
 
 
   <!-- Schema LocalBusiness -->
@@ -82,7 +76,7 @@
   <!-- Hero Area: Home -->
   <section id="home">
     <div class="hero-logo">
-      <img src="img/logo.svg" alt="Logo de la empresa">
+      <img src="img/logo_10opacity.svg" alt="Logo de la empresa">
     </div>
     <h1>Trusted Pro Handyman Services</h1>
     <p>We specialize in interior and exterior painting and bathroom remodeling. Transform your space with quality, speed, and competitive prices.</p>
