--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
   <!-- Hero Area: Contact -->
   <section id="contact">
     <h2>Contact Us</h2>
-    <form name="contact" method="POST" data-netlify="true">
+    <form name="contact" method="POST" data-netlify="true" netlify>
       <input type="text" name="name" placeholder="Name" required>
       <input type="email" name="email" placeholder="Email" required>
       <textarea name="message" placeholder="Message" required></textarea>
