--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
       <textarea name="message" placeholder="Message" required></textarea>
       <button type="submit">Send</button>
     </form>
-
+<!-- INICIO form test netlify 
     <form name="contact2" method="POST" data-netlify="true">
       <p>
         <label>Your Name: <input type="text" name="name" /></label>
@@ -259,6 +259,7 @@
         <button type="submit">Send</button>
       </p>
     </form>
+ FIN form test netlify -->
 
 <p></p>
 <p></p>
