--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
     <form name="contact" method="POST" data-netlify="true">
       <input type="hidden" name="form-name" value="contact">
 
-      <input type="text" name="name" placeholder="Name" required>
+      <input type="text" name="name" placeholder="Name2" required>
       <input type="email" name="email" placeholder="Email" required>
       <textarea name="message" placeholder="Message" required></textarea>
       <button type="submit">Send</button>
